# Breakout

./: .gitignore  CMakeLists.txt  README.md  devlog.md
Engine/: CMakeLists.txt
Engine/Dependencies/lodepng/: CMakeLists.txt
Engine/Dependencies/stb/: CMakeLists.txt
Engine/Dependencies/stb/stb/: stb_truetype.cpp
Engine/resources/shaders/: frag.glsl  text_frag.glsl  text_vert.glsl  vert.glsl
Engine/src/: Application.cpp  Application.h  Utils.h
Engine/src/Core/: Application.cpp  Application.h  Input.h  KeyCodes.h  Window.cpp  Window.h
Engine/src/ECS/: ComponentManager.h  ECS.h  EntityManager.h  View.h
Engine/src/Math/: Coordinates.cpp  Coordinates.h  Mat3.cpp  Mat3.h  Mat4.cpp  Mat4.h  Quaternion.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h  Vec4.cpp  Vec4.h
Engine/src/Physics/: ACollisionListenerSystem.h  APhysicsSystem.h  BroadphaseSystem.h  CollectObjectsSystem.h  CollisionEventDispatcherSystem.h  CollisionEventsSystem.h  CollisionPair.h  CollisionReactionResolveSystem.h  CollisionStructs.h  DynamicsSystem.h  NarrowphaseSystem.h  PhysicsComponents.h  PhysicsSystem.cpp  PhysicsSystem.h  PhysicsWorld.cpp  PhysicsWorld.h  Ray.h
Engine/src/Renderer/: Buffers.cpp  Buffers.h  Camera.cpp  Camera.h  Light.h  Material.cpp  Material.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Engine/src/Renderer/Text/: FontLoader.cpp  FontLoader.h  Text.cpp  Text.h
Engine/src/Scene/: Components.h  ECS.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  ScriptableEntity.h  Systems.cpp  Systems.h
Engine/src/Utils/: MeshGenerator.cpp  MeshGenerator.h
Game/: Breakout.cpp  Breakout.h  BreakoutScene.cpp  BreakoutScene.h  CMakeLists.txt  Main.cpp
Game/Components/: BallComponent.h  BlockComponent.h  BreakoutComponents.h  PlayerComponent.h
Game/Scripts/: TestScript.cpp
Game/Systems/: PlayerMovementSystem.h  Systems.cpp  Systems.h
Game/resources/shaders/: vert.glsl
resources/shaders/: frag.glsl
src/: CMakeLists.txt  main.cpp  main.h
src/Math/: Mat3.cpp  Mat3.h  Vec3.cpp  Vec3.h
src/Renderer/: Shader.cpp
src/renderer/: shader.h
